--- a/index.html
+++ b/index.html
@@ -94,24 +94,43 @@
       </div>
     </section>
     <!-- contact start -->
-    <section class=" bg-neutral-800 py-12 px-4 sm:px-6 lg:px-8">
-      <div class="container">
-        
-        <div class="heading max-w-3xl mx-auto text-center">
-          <h3 class="text-neutral-500 text-2xl">Want to get in touch?</h3>
-          <p class="text-neutral-500">
-            Feel free to send me a message and I'll get back to you as soon as I
-            can.
+    <section class="contact flex justify-center items-center bg-neutral-800 py-8">
+      <div class="container max-w-3xl">
+        <div class="heading flex flex-col justify-center">
+          <h3 class="text-2xl font-bold text-stone-300">Want to get in touch?</h3>
+          <p class="text-gray-400 mt-2">
+            Feel free to send me a message and I'll get back to you as soon as I can.
           </p>
         </div>
-        <form>
-          <div>
-            <input type="text" placeholder="First name">
-          <input type="text" placeholder="Last name">
+        <form action="#" class="mt-8">
+          <div class="row-box flex flex-row justify-between">
+            <input
+              class="w-full md:w-1/2 mr-4 p-3 rounded-md bg-neutral-700 text-white"
+              type="text"
+              placeholder="First name"
+            />
+            <input
+              class="w-full md:w-1/2 p-3 rounded-md bg-neutral-700 text-white"
+              type="text"
+              placeholder="Last name"
+            />
           </div>
-          <input type="email" placeholder="Email Address">
-          <textarea placeholder="Your message"></textarea>
-          <button type="submit">Send message</button>
+          <input
+            class="w-full mt-4 p-3 rounded-md bg-neutral-700 text-white"
+            type="email"
+            placeholder="Email Address"
+          />
+          <textarea
+            class="w-full mt-4 p-3 rounded-md bg-neutral-700 text-white"
+            rows="4"
+            placeholder="Your message"
+          ></textarea>
+          <button
+            class="bg-neutral-500 px-6 py-3 rounded-lg text-lg text-zinc-800 mt-4 hover:bg-neutral-600"
+            type="submit"
+          >
+            Send Message
+          </button>
         </form>
       </div>
     </section>
