--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
+      integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="style/style.css" />
     <title>Document</title>
   </head>
@@ -30,110 +37,155 @@
       </div>
     </header>
     <!-- header end -->
-
-    <!-- banner start -->
-    <section class="banner-slider">
-      <div class="slider-container">
-        <div class="slider">
-          <img src="assets/slider/img1.jpg" alt="Slide 1" class="slide" />
-          <img src="assets/slider/img2.jpg" alt="Slide 2" class="slide" />
-          <img src="assets/slider/img3.jpg" alt="Slide 3" class="slide" />
-          <img src="assets/slider/img4.jpg" alt="Slide 4" class="slide" />
-          <img src="assets/slider/img5.jpg" alt="Slide 5" class="slide" />
-          <img src="assets/slider/img6.jpg" alt="Slide 6" class="slide" />
-          <img src="assets/slider/img7.jpg" alt="Slide 7" class="slide" />
-          <img src="assets/slider/img8.jpg" alt="Slide 8" class="slide" />
-          <img src="assets/slider/img9.jpg" alt="Slide 9" class="slide" />
-        </div>
-
-        <div class="thumbnail-container"></div>
-      </div>
-    </section>
-    <!-- banner end -->
-
-    <!-- about start -->
-    <section class="about bg-neutral-800">
-      <div class="container">
-        <!-- about-box -->
-        <div class="flex flex-row p-11 justify-center items-center">
-          <!--about img  -->
-          <div class="about-img">
-            <img src="assets/ZK_Portrait_LO_crop-888x1024-1.jpg" alt="" />
+    <main>
+      <!-- banner start -->
+      <section class="banner-slider">
+        <div class="slider-container">
+          <div class="slider">
+            <img src="assets/slider/img1.jpg" alt="Slide 1" class="slide" />
+            <img src="assets/slider/img2.jpg" alt="Slide 2" class="slide" />
+            <img src="assets/slider/img3.jpg" alt="Slide 3" class="slide" />
+            <img src="assets/slider/img4.jpg" alt="Slide 4" class="slide" />
+            <img src="assets/slider/img5.jpg" alt="Slide 5" class="slide" />
+            <img src="assets/slider/img6.jpg" alt="Slide 6" class="slide" />
+            <img src="assets/slider/img7.jpg" alt="Slide 7" class="slide" />
+            <img src="assets/slider/img8.jpg" alt="Slide 8" class="slide" />
+            <img src="assets/slider/img9.jpg" alt="Slide 9" class="slide" />
           </div>
-          <!-- about text  -->
-          <div class="about-text">
-            <h1 class="text-5xl text-stone-300 mb-4">About Zubuyer Kaolin</h1>
-            <p class="text-2xl text-stone-300 text-justify">
-              Zubuyer is a film maker, animator, inventor and an award winning
-              astrophotographer who is on a journey to tell stories through
-              different medium. He is constantly finding new ways to converge
-              his love of art, technology and photography by pushing the
-              boundaries of what's possible. His work has garnered attention
-              from the likes of European Space Agency, Sony, Adobe and many
-              more. His work is enjoyed by millions around the world and
-              inspired many to follow in his footsteps. His goal is to keep
-              expanding his horizon of creativity and find new ways to tell
-              great stories.
+
+          <div class="thumbnail-container"></div>
+        </div>
+      </section>
+      <!-- banner end -->
+
+      <!-- about start -->
+      <section class="about bg-neutral-800">
+        <div class="container">
+          <!-- about-box -->
+          <div class="flex flex-row p-11 justify-center items-center">
+            <!--about img  -->
+            <div class="about-img">
+              <img src="assets/ZK_Portrait_LO_crop-888x1024-1.jpg" alt="" />
+            </div>
+            <!-- about text  -->
+            <div class="about-text">
+              <h1 class="text-5xl text-stone-300 mb-4">About Zubuyer Kaolin</h1>
+              <p class="text-2xl text-stone-300 text-justify">
+                Zubuyer is a film maker, animator, inventor and an award winning
+                astrophotographer who is on a journey to tell stories through
+                different medium. He is constantly finding new ways to converge
+                his love of art, technology and photography by pushing the
+                boundaries of what's possible. His work has garnered attention
+                from the likes of European Space Agency, Sony, Adobe and many
+                more. His work is enjoyed by millions around the world and
+                inspired many to follow in his footsteps. His goal is to keep
+                expanding his horizon of creativity and find new ways to tell
+                great stories.
+              </p>
+            </div>
+          </div>
+          <div class="collabration flex flex-col justify-center items-center">
+            <h4 class="text-stone-300 text-2xl">Collaborated with:</h4>
+            <img class="w-50 h-40" src="assets/BRANDS (1).png" alt="" />
+          </div>
+        </div>
+      </section>
+      <!-- about end -->
+      <!-- senario -->
+      <section class="senario flex justify-center items-center h-screen">
+        <div class="container text-center">
+          <h1 class="text-4xl md:text-6xl font-bold text-white">
+            Bringing the beauty of our cosmos a bit
+          </h1>
+          <h1 class="text-4xl md:text-6xl font-bold text-white">
+            closer to you
+          </h1>
+        </div>
+      </section>
+    </main>
+    <!-- footer start -->
+    <footer class="bg-neutral-800">
+      <!-- contact form -->
+      <section class="contact flex justify-center items-center py-8">
+        <div class="container max-w-3xl">
+          <div class="heading flex flex-col justify-center">
+            <h3 class="text-2xl font-bold text-stone-300">
+              Want to get in touch?
+            </h3>
+            <p class="text-gray-400 mt-2">
+              Feel free to send me a message and I'll get back to you as soon as
+              I can.
             </p>
           </div>
-        </div>
-        <div class="collabration flex flex-col justify-center items-center">
-          <h4 class="text-stone-300 text-2xl">Collaborated with:</h4>
-          <img class="w-50 h-40" src="assets/BRANDS (1).png" alt="" />
-        </div>
-      </div>
-    </section>
-    <!-- about end -->
-    <!-- senario -->
-    <section class="senario flex justify-center items-center h-screen">
-      <div class="container text-center">
-        <h1 class="text-4xl md:text-6xl font-bold text-white">
-          Bringing the beauty of our cosmos a bit
-        </h1>
-        <h1 class="text-4xl md:text-6xl font-bold text-white">closer to you</h1>
-      </div>
-    </section>
-    <!-- contact start -->
-    <section class="contact flex justify-center items-center bg-neutral-800 py-8">
-      <div class="container max-w-3xl">
-        <div class="heading flex flex-col justify-center">
-          <h3 class="text-2xl font-bold text-stone-300">Want to get in touch?</h3>
-          <p class="text-gray-400 mt-2">
-            Feel free to send me a message and I'll get back to you as soon as I can.
-          </p>
-        </div>
-        <form action="#" class="mt-8">
-          <div class="row-box flex flex-row justify-between">
+          <form action="#" method="post" class="mt-8">
+            <div class="row-box flex flex-row justify-between">
+              <input
+                name="first_name"
+                class="w-full md:w-1/2 mr-4 p-3 rounded-md bg-neutral-700 text-white"
+                type="text"
+                placeholder="First name"
+                required
+              />
+              <input
+                name="last_name"
+                class="w-full md:w-1/2 p-3 rounded-md bg-neutral-700 text-white"
+                type="text"
+                placeholder="Last name"
+                required
+              />
+            </div>
             <input
-              class="w-full md:w-1/2 mr-4 p-3 rounded-md bg-neutral-700 text-white"
-              type="text"
-              placeholder="First name"
+              name="email"
+              class="w-full mt-4 p-3 rounded-md bg-neutral-700 text-white"
+              type="email"
+              placeholder="Email Address"
+              required
             />
-            <input
-              class="w-full md:w-1/2 p-3 rounded-md bg-neutral-700 text-white"
-              type="text"
-              placeholder="Last name"
-            />
-          </div>
-          <input
-            class="w-full mt-4 p-3 rounded-md bg-neutral-700 text-white"
-            type="email"
-            placeholder="Email Address"
-          />
-          <textarea
-            class="w-full mt-4 p-3 rounded-md bg-neutral-700 text-white"
-            rows="4"
-            placeholder="Your message"
-          ></textarea>
-          <button
-            class="bg-neutral-500 px-6 py-3 rounded-lg text-lg text-zinc-800 mt-4 hover:bg-neutral-600"
-            type="submit"
-          >
-            Send Message
-          </button>
-        </form>
-      </div>
-    </section>
+            <textarea
+              name="message"
+              class="w-full mt-4 p-3 rounded-md bg-neutral-700 text-white"
+              rows="4"
+              placeholder="Your message"
+              required
+            ></textarea>
+            <button
+              class="bg-neutral-500 px-6 py-3 rounded-lg text-lg text-zinc-800 mt-4 hover:bg-neutral-600"
+              type="submit"
+            >
+              Send Message
+            </button>
+          </form>
+        </div>
+      </section>
+
+      <section class="social-media py-4 text-stone-500 text-center">
+        <div class="icons">
+          <ul class="flex justify-center items-center mb-4">
+            <li class="hover:scale-110">
+              <a href="https://www.instagram.com/your_profile" target="_blank">
+                <i class="fa-brands fa-instagram text-3xl"></i>
+              </a>
+            </li>
+            <li class="hover:scale-110">
+              <a href="https://www.facebook.com/your_profile" target="_blank">
+                <i class="fa-brands fa-facebook text-3xl"></i>
+              </a>
+            </li>
+            <li class="hover:scale-110">
+              <a href="https://www.twitter.com/your_profile" target="_blank">
+                <i class="fa-brands fa-twitter text-3xl"></i>
+              </a>
+            </li>
+            <li class="hover:scale-110">
+              <a href="https://www.threads.net/@your_profile" target="_blank">
+                <i class="fa-brands fa-threads text-3xl"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <p class="text-lg">© 2024, Owasiul Islam | All Rights Reserved.</p>
+      </section>
+    </footer>
     <script src="style/script.js"></script>
   </body>
 </html>
